# agentic-interface

./: .gitignore  AGENTS.md  README.md
.claude/specs/: copilot-runtime-fixes.md  copilotkit-frontend-autonomous.md  copilotkit-frontend-conversational-hitl.md  copilotkit-frontend-conversational.md  copilotkit-frontend-functionality.md  copilotkit-frontend-minor-ux-1.md  copilotkit-frontend-routing.md  copilotkit-frontend-workflow-visualization-new-version.md  copilotkit-frontend-workflow-visualization-phase-123.md  copilotkit-frontend-workflow-visualization-phase-3-improvements.md  copilotkit-frontend-workflow-visualization.md  langgraph-agent-autonomous.md  langgraph-agent-conversational-hitl.md  langgraph-agent-conversational.md  patch-copilotkit-inspector.md  workflow-replay-debug-investigation.md
agent-auto/: .env.example  agent.py  langgraph.json  pyproject.toml
agent-auto/graphs/: agent_auto_ex_1.py  agent_auto_ex_2.py  agent_auto_example_1.py  agent_auto_example_2.py
agent-convo/: agent.py  langgraph.json  mcp_server.py  pyproject.toml
agent-convo/mock_data/: company_overview.py  stock_prices.py
frontend/: .env.local.example  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: Conversation.tsx  InterruptModal.tsx  LayoutClient.tsx  Navbar.tsx  NextGenWorkflow.tsx  Providers.tsx  StockDataToolRenderer.tsx  StockPriceChart.tsx  ToolRenderer.tsx  ToolSelectionDialog.tsx  ViewWorkflows.tsx  Workflow.tsx  WorkflowRawView.tsx  WorkflowVisualizer.tsx
frontend/config/: backend-config.ts
(+16 files in other folders)
