[project]
name = "agent-convo"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "langgraph>=1.1",
    "langchain>=1.2",
    "langchain-openai>=0.3",
    "langchain-mcp-adapters>=0.2",
    "mcp>=1.27",
    "python-dotenv>=1.2",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "langgraph-cli[inmem]>=0.4",
]
